--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
   {
     "nickname": "hot_slack_bot",
     "server": "irc.oftc.net",
-    "token": process.env.SLACK_TOKEN,
+    "token": "process.env.SLACK_TOKEN",
     "channelMapping": {
       "#hot_irc_channel": "#hot"
     }
